# dd_easy_views

./: .gitignore  .pypirc  MANIFEST.in  README.rst  setup.cfg  setup.py
dd_easy_views/: manage.py
dd_easy_views/dd_easy_views/: asgi.py  settings.py  urls.py  wsgi.py
dd_easy_views/easy/: easy.py
dd_easy_views/easy/templates/easy/: create.html  detail.html  list.html  update.html
easy/: __init__.py  views.py
easy/templates/easy/: create.html  detail.html  list.html  update.html
easy/utils/: template.py
