[metadata]
name = dd_easy_views
version = 0.22
description = View mixins to make life better.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/dopename/dd_easy_views
author = Nick Marini
author_email = nick@mindbrain.llc
license = MIT

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.2
    django_tables2